Project 22 - Infrastructure as a Code using Terraform Part 3/IaC-Modularized-Project/Modules/networking/main.tf

# Get list of availability zones
data "aws_availability_zones" "available" {
  state = "available"
}
# Create VPC
resource "aws_vpc" "dio-vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_support

  tags = merge(
    var.tags, {
      Name = "dio-vpc"
    }
  )

}

# Create public subnets
resource "aws_subnet" "public" {
  count                   = var.preferred_number_of_public_subnets == null ? length(data.aws_availability_zones.available.names) : var.preferred_number_of_public_subnets
  vpc_id                  = aws_vpc.dio-vpc.id
  cidr_block              = cidrsubnet(var.vpc_cidr, 8, (count.index + 1) * 2) #Using even numbers for the CIDR_BLOCK 
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[count.index]

  tags = merge(
    var.tags,
    {
      Name = "pub_sub_${count.index + 1}"
    },
  )
}

# Create private subnets
resource "aws_subnet" "private" {
  count                   = var.preferred_number_of_private_subnets == null ? length(data.aws_availability_zones.available.names) : var.preferred_number_of_private_subnets
  vpc_id                  = aws_vpc.dio-vpc.id
  cidr_block              = cidrsubnet(var.vpc_cidr, 8, ((count.index + 1) * 2) + 1) #Using odd numbers for the CIDR_BLOCK
  map_public_ip_on_launch = false
  availability_zone       = data.aws_availability_zones.available.names[count.index]

  tags = merge(
    var.tags,
    {
      Name = "priv_sub_${count.index + 1}"
    },
  )
}
